# CommonLibSSE-NG_Example_Plugin

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
src/: main.cpp  plugin.hpp
